CinemaHall service/mapper tests. All pass